Adiciona variável CSRF_TRUSTED_ORIGINS no arquivo .env-example para permitir domínios específicos quando DEBUG=False

--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -4,6 +4,8 @@ SECRET_KEY="CHANGE-ME"
 DEBUG="1"
 
 # Comma separated list of allowed hosts
+# CSRF_TRUSTED_ORIGINS: Lista de domínios que podem acessar o site quando DEBUG=False
+CSRF_TRUSTED_ORIGINS = "https://prdl.shop, https://www.prdl.shop, http://localhost:8000"
 ALLOWED_HOSTS="*"
 CORS_ALLOWED_ORIGINS="*"
 CORS_ALLOW_ALL=True
